...
            meals = allMeals
        }
    }       
}

enum MealFilterOption: String {
    case all = "All Meals"
    case recent = "Recent Meals"
    case breakfast = "Breakfast Meals"
    case lunch = "Lunch Meals"
    case dinner = "Dinner Meals"
    case snack = "Snacks"
}
...
