...
            VStack(spacing: 0) {
                Slider(value: Binding(get: { amount }, set: { (newValue) in
                    amount = newValue
                    foodController.scale(newValue / 100)
                }), in: 5...500, step: 5,  minimumValueLabel: Text("5g"), maximumValueLabel: Text("500g")) { Text("Amount") }
                .padding(.top, padding)
                .accessibility(identifier: "amountPicker")
                
                Text("\(amount, specifier: "%.0f")g")
                    .padding(.bottom)
                    .font(.title2)
                                
                eatButton                    
...
